update task